--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <form>
+        <div>
+            <label for="Nombre">Ingrese su nombre:  </label>
+            <input type="text" nombre="nombre" required />
+        </div>
+        
+        <input type="submit" value="Enviar" />
+        <input type="reset" value="Borrar" />
 
+    </form>
+</body>
+</html>
